--- a/cmd/traefik/traefik_darwin_amd64/traefik.sample.toml
+++ b/cmd/traefik/traefik_darwin_amd64/traefik.sample.toml
@@ -23,7 +23,7 @@
 # Default:
 [entryPoints]
   [entryPoints.web]
-    address = ":8081"
+    address = ":8085"
 
   [entryPoints.websecure]
     address = ":8443"
@@ -44,7 +44,7 @@
   # Optional
   # Default: "ERROR"
   #
-  # level = "DEBUG"
+#   level = "DEBUG"
 
   # Sets the filepath for the traefik log. If not specified, stdout will be used.
   # Intermediate directories are created if necessary.
@@ -71,7 +71,7 @@
 #
 # Optional
 #
-# [accessLog]
+ [accessLog]
 
   # Sets the file path for the access log. If not specified, stdout will be used.
   # Intermediate directories are created if necessary.
