--- a/traefik.sample.toml
+++ b/traefik.sample.toml
@@ -10,8 +10,8 @@
 # Global configuration
 ################################################################
 [global]
-  checkNewVersion = true
-  sendAnonymousUsage = true
+  checkNewVersion = false
+  sendAnonymousUsage = false
 
 ################################################################
 # Entrypoints configuration
@@ -23,10 +23,12 @@
 # Default:
 [entryPoints]
   [entryPoints.web]
-    address = ":8085"
+    address = ":8080"
 
-  [entryPoints.websecure]
-    address = ":8443"
+#  [entryPoints.websecure]
+#    address = ":8443"
+  [entryPoints.traefik]
+    address = ":8079"
 
 ################################################################
 # Traefik logs configuration
@@ -44,7 +46,7 @@
   # Optional
   # Default: "ERROR"
   #
-#   level = "DEBUG"
+   level = "ERROR"
 
   # Sets the filepath for the traefik log. If not specified, stdout will be used.
   # Intermediate directories are created if necessary.
@@ -93,21 +95,21 @@
 ################################################################
 
 # Enable API and dashboard
-[api]
+#[api]
 
   # Enable the API in insecure mode
   #
   # Optional
   # Default: false
   #
-  insecure = true
+  #insecure = true
 
   # Enabled Dashboard
   #
   # Optional
   # Default: true
   #
-  dashboard = true
+  #dashboard = false
 
 ################################################################
 # Ping configuration
@@ -121,7 +123,7 @@
   # Optional
   # Default: "traefik"
   #
-  # entryPoint = "traefik"
+  entryPoint = "traefik"
 
 ################################################################
 # Docker configuration backend
