--- a/traefik.sample.toml
+++ b/traefik.sample.toml
@@ -46,7 +46,7 @@
   # Optional
   # Default: "ERROR"
   #
-   level = "ERROR"
+   level = "DEBUG"
 
   # Sets the filepath for the traefik log. If not specified, stdout will be used.
   # Intermediate directories are created if necessary.
@@ -73,7 +73,7 @@
 #
 # Optional
 #
- [accessLog]
+# [accessLog]
 
   # Sets the file path for the access log. If not specified, stdout will be used.
   # Intermediate directories are created if necessary.
